force-app/main/default/objects/Line_Item_Day__c/Line_Item_Day__c.object-meta.xml
<CustomObject>
    <label>Line Item Day</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Line Item Day ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Item Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>