force-app/main/default/objects/Line_Item_Day__c/fields/Auto_Num__c.field-meta.xml
<CustomField>
    <fullName>Auto_Num__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Auto Num</label>
    <type>AutoNumber</type>
</CustomField>