force-app/main/default/objects/Line_Item_Day__c/fields/Contract_Day__c.field-meta.xml
<CustomField>
    <fullName>Contract_Day__c</fullName>
    <label>Contract Day</label>
    <type>Date</type>
</CustomField>