force-app/main/default/objects/Line_Item_Day__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>